<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_eight"
    android:theme="@style/RecyclerViewItemStyle">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency_conversion"
        android:layout_marginBottom="@dimen/margin_sixteen"
        android:textStyle="bold"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_sixteen">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountInRubles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_amount_in_rubles"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_sixteen">

        <TextView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/result"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/result_text_size"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negativeButtonDialog"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close"
            android:layout_margin="@dimen/margin_eight"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positiveButtonDialog"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculate"
            android:layout_margin="@dimen/margin_eight"/>
    </LinearLayout>


</LinearLayout>